tests/integration/semantic_ast/snapshots/integration_test__semantic_ast__semantic_ast_projects_elements_bridge__semantic_ast_projects_org_element_alignment_gap_has_snapshot.snap
---
source: tests/integration/semantic_ast/semantic_ast_projects_elements_bridge.rs
assertion_line: 813
expression: "serde_json::to_string_pretty(&payload).unwrap()"
---
{
  "baseline": {
    "affiliatedKeywords": [
      "CAPTION",
      "DATA",
      "HEADER",
      "HEADERS",
      "LABEL",
      "NAME",
      "PLOT",
      "RESNAME",
      "RESULT",
      "RESULTS",
      "SOURCE",
      "SRCNAME",
      "TBLNAME"
    ],
    "elements": [
      "babel-call",
      "center-block",
      "clock",
      "comment",
      "comment-block",
      "diary-sexp",
      "drawer",
      "dynamic-block",
      "example-block",
      "export-block",
      "fixed-width",
      "footnote-definition",
      "headline",
      "horizontal-rule",
      "inlinetask",
      "item",
      "keyword",
      "latex-environment",
      "node-property",
      "paragraph",
      "plain-list",
      "planning",
      "property-drawer",
      "quote-block",
      "section",
      "special-block",
      "src-block",
      "table",
      "table-row",
      "verse-block"
    ],
    "greaterElements": [
      "center-block",
      "drawer",
      "dynamic-block",
      "footnote-definition",
      "headline",
      "inlinetask",
      "item",
      "plain-list",
      "property-drawer",
      "quote-block",
      "section",
      "special-block",
      "table",
      "org-data"
    ],
    "objects": [
      "bold",
      "citation",
      "citation-reference",
      "code",
      "entity",
      "export-snippet",
      "footnote-reference",
      "inline-babel-call",
      "inline-src-block",
      "italic",
      "line-break",
      "latex-fragment",
      "link",
      "macro",
      "radio-target",
      "statistics-cookie",
      "strike-through",
      "subscript",
      "superscript",
      "table-cell",
      "target",
      "timestamp",
      "underline",
      "verbatim"
    ],
    "recursiveObjects": [
      "bold",
      "citation",
      "footnote-reference",
      "italic",
      "link",
      "subscript",
      "radio-target",
      "strike-through",
      "superscript",
      "table-cell",
      "underline"
    ],
    "source": "bzg/org-mode b470d81 org-element.el",
    "standardProperties": [
      ":begin",
      ":post-affiliated",
      ":contents-begin",
      ":contents-end",
      ":end",
      ":post-blank",
      ":secondary",
      ":mode",
      ":granularity",
      ":cached",
      ":org-element--cache-sync-key",
      ":robust-begin",
      ":robust-end",
      ":true-level",
      ":buffer",
      ":deferred",
      ":structure",
      ":parent"
    ]
  },
  "current": {
    "affiliatedFields": [
      "name"
    ],
    "affiliatedKeywordRecords": [
      "CAPTION",
      "DATA",
      "HEADER",
      "HEADERS",
      "LABEL",
      "NAME",
      "PLOT",
      "RESNAME",
      "RESULT",
      "RESULTS",
      "SOURCE",
      "SRCNAME",
      "TBLNAME"
    ],
    "elementLikeKinds": [
      "babel-call",
      "center-block",
      "clock",
      "comment",
      "comment-block",
      "diary-sexp",
      "drawer",
      "dynamic-block",
      "example-block",
      "export-block",
      "fixed-width",
      "footnote-definition",
      "headline",
      "horizontal-rule",
      "inlinetask",
      "item",
      "keyword",
      "latex-environment",
      "node-property",
      "org-data",
      "paragraph",
      "plain-list",
      "planning",
      "property-drawer",
      "quote-block",
      "section",
      "special-block",
      "src-block",
      "table",
      "table-row",
      "verse-block"
    ],
    "objectKinds": [
      "bold",
      "citation",
      "citation-reference",
      "code",
      "entity",
      "export-snippet",
      "footnote-reference",
      "inline-babel-call",
      "inline-src-block",
      "italic",
      "latex-fragment",
      "line-break",
      "link",
      "macro",
      "plain-text",
      "radio-target",
      "statistics-cookie",
      "strike-through",
      "subscript",
      "superscript",
      "table-cell",
      "target",
      "timestamp",
      "underline",
      "verbatim"
    ],
    "propertyKeys": [
      ":CUSTOM_ID",
      ":OWNER",
      ":anchor",
      ":arguments",
      ":backend",
      ":begin",
      ":bullet",
      ":cells",
      ":checkbox",
      ":children",
      ":closed",
      ":columnIndex",
      ":columnName",
      ":contents-begin",
      ":contents-end",
      ":counter",
      ":deadline",
      ":duration",
      ":elements",
      ":end",
      ":hasDescription",
      ":hasText",
      ":isHeader",
      ":isImage",
      ":isRule",
      ":items",
      ":key",
      ":label",
      ":language",
      ":level",
      ":metadata",
      ":name",
      ":objects",
      ":optional",
      ":parameters",
      ":parent",
      ":path",
      ":post-affiliated",
      ":post-blank",
      ":priority",
      ":properties",
      ":raw",
      ":raw-value",
      ":references",
      ":resolvedLabel",
      ":rowIndex",
      ":rows",
      ":scheduled",
      ":sections",
      ":style",
      ":tagObjectCount",
      ":tags",
      ":targetKind",
      ":text",
      ":title",
      ":todo",
      ":todo-keyword",
      ":todo-type",
      ":true-level",
      ":value",
      ":valueBytes"
    ]
  },
  "gaps": {
    "missingAffiliatedKeywordRecords": [],
    "missingElementLikeKinds": [],
    "missingObjectKinds": [],
    "missingStandardProperties": [
      ":buffer",
      ":cached",
      ":deferred",
      ":granularity",
      ":mode",
      ":org-element--cache-sync-key",
      ":robust-begin",
      ":robust-end",
      ":secondary",
      ":structure"
    ],
    "orgizeSpecificElementLikeKinds": [],
    "orgizeSpecificObjectKinds": [
      "plain-text"
    ]
  }
}
