tests/integration/semantic_ast/snapshots/integration_test__semantic_ast__semantic_ast_projects_elements_bridge__semantic_ast_projects_upstream_org_element_defconsts_match_checked_in_baseline.snap
---
source: tests/integration/semantic_ast/semantic_ast_projects_elements_bridge.rs
expression: "serde_json::to_string_pretty(&serde_json::json!({\n    \"source\": \"bzg/org-mode .data/org-mode/lisp/org-element.el\",\n    \"allElements\": upstream.all_elements, \"greaterElements\":\n    upstream.greater_elements, \"allObjects\": upstream.all_objects,\n    \"recursiveObjects\": upstream.recursive_objects, \"affiliatedKeywords\":\n    upstream.affiliated_keywords,\n})).unwrap()"
---
{
  "affiliatedKeywords": [
    "CAPTION",
    "DATA",
    "HEADER",
    "HEADERS",
    "LABEL",
    "NAME",
    "PLOT",
    "RESNAME",
    "RESULT",
    "RESULTS",
    "SOURCE",
    "SRCNAME",
    "TBLNAME"
  ],
  "allElements": [
    "babel-call",
    "center-block",
    "clock",
    "comment",
    "comment-block",
    "diary-sexp",
    "drawer",
    "dynamic-block",
    "example-block",
    "export-block",
    "fixed-width",
    "footnote-definition",
    "headline",
    "horizontal-rule",
    "inlinetask",
    "item",
    "keyword",
    "latex-environment",
    "node-property",
    "paragraph",
    "plain-list",
    "planning",
    "property-drawer",
    "quote-block",
    "section",
    "special-block",
    "src-block",
    "table",
    "table-row",
    "verse-block"
  ],
  "allObjects": [
    "bold",
    "citation",
    "citation-reference",
    "code",
    "entity",
    "export-snippet",
    "footnote-reference",
    "inline-babel-call",
    "inline-src-block",
    "italic",
    "line-break",
    "latex-fragment",
    "link",
    "macro",
    "radio-target",
    "statistics-cookie",
    "strike-through",
    "subscript",
    "superscript",
    "table-cell",
    "target",
    "timestamp",
    "underline",
    "verbatim"
  ],
  "greaterElements": [
    "center-block",
    "drawer",
    "dynamic-block",
    "footnote-definition",
    "headline",
    "inlinetask",
    "item",
    "plain-list",
    "property-drawer",
    "quote-block",
    "section",
    "special-block",
    "table",
    "org-data"
  ],
  "recursiveObjects": [
    "bold",
    "citation",
    "footnote-reference",
    "italic",
    "link",
    "subscript",
    "radio-target",
    "strike-through",
    "superscript",
    "table-cell",
    "underline"
  ],
  "source": "bzg/org-mode .data/org-mode/lisp/org-element.el"
}
